# GSPKit

./: .buildinfo  .gitignore  404.html  README.md  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci-cd.yml  documentation.yml
_modules/: index.html
_modules/gspkit/linalg/: utils.html
_sources/autoapi/gspkit/: index.rst.txt
_sources/autoapi/gspkit/linalg/: index.rst.txt
api/: index.html
api/data/: index.html
api/data/graphs/: index.html
api/data/signals/: index.html
api/filters/: index.html
api/linalg/: index.html
api/typing/: index.html
autoapi/gspkit/: index.html
autoapi/gspkit/linalg/: index.html
docs/: Makefile  conf.py  index.md  requirements.txt
docs-includes/: abbreviations.md
docs/api/: data.md  filters.md  linalg.md  typing.md
docs/api/data/: graphs.md  index.md  signals.md
gspkit/: __init__.py  exceptions.py  filters.py  input_checks.py  styles.txt  typing.py
gspkit/data/: __init__.py  graphs.py  signals.py
gspkit/gl/: metrics.py
gspkit/linalg/: __init__.py  laplacians.py  spectrum.py  utils.py
search/: search_index.json
tests/: test_filters.py  test_graph_generation.py  test_laplacians_funs.py  test_linalg.py  test_signal_generation.py
