[tool.poetry]
name = "gspkit"
version = "0.1.0"
description = ""
authors = ["abdkarr <7543956+abdkarr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=2.0.0"
networkx = ">=3.4.2"
scipy = ">=1.14.1"
scikit-learn = ">=1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.3"
pytest-cov = ">=6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
